@@ -12,10 +12,12 @@ repositories {
 dependencies {
     implementation("org.openjdk.nashorn:nashorn-core:15.7")
     implementation("com.dorkbox:SystemTray:4.4")
+    implementation("com.formdev:flatlaf:3.7.1")
     implementation("com.github.hypfvieh:dbus-java-core:5.2.0")
     implementation("com.github.hypfvieh:dbus-java-transport-junixsocket:5.2.0")
-    implementation("com.formdev:flatlaf:3.7.1")
+
     testImplementation(kotlin("test"))
+    testImplementation("io.mockk:mockk:1.14.11")
 }
 
 kotlin {
@@ -39,4 +41,5 @@ tasks.jar {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
 }
